# go2url

./: .env.example  .gitignore  Cargo.toml
db/: one-line.txt
go/: example.txt
src/: app-bu.rs  app.rs  db-bu.rs  db.rs  error.rs  handlers copy.rs  handlers-bu.rs  handlers.rs  lib.rs  main-bu.rs  main-db-bu.rs  main-db.rs  main-hyper.rs  main-temp.rs  main-validate.rs  main.rs  service.rs  validate.rs
src/db/: error.rs  mod.rs
src/service/: handlers.rs  mod.rs
