[package]
name = "go2url-icu"
version = "0.1.0"
authors = ["Alex Black <wa7@sa34.cx>"]
description = "Redirect to random URL in file"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wa7sa34cx/go2url-icu"
readme = "README.md"

[dependencies]
rand = "0.8.3"
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6.7"
regex = "1.5"